// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render closed 1`] = `
<div class="Sidebar">
  <sidebartoggle-stub title="Shortcut: s"></sidebartoggle-stub>
  <div class="container" style="display: none;" name="slideLeft">
    <sidebarboardactions-stub></sidebarboardactions-stub>
    <sidebarboards-stub boards="" activeid=""></sidebarboards-stub>
    <sidebaractions-stub></sidebaractions-stub>
  </div>
</div>
`;

exports[`render opened 1`] = `
<div class="Sidebar">
  <sidebartoggle-stub toggled="true" title="Shortcut: s"></sidebartoggle-stub>
  <div class="container" name="slideLeft">
    <sidebarboardactions-stub></sidebarboardactions-stub>
    <sidebarboards-stub boards="" activeid=""></sidebarboards-stub>
    <sidebaractions-stub></sidebaractions-stub>
  </div>
</div>
`;
